// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnhancedMap component should match snapshot when coords not passed 1`] = `
<withScriptjs(withGoogleMap(Component))
  center={
    Object {
      "lat": 51.28,
      "lng": 0,
    }
  }
  containerElement={
    <div
      className="wrapper"
    />
  }
  defaultZoom={5}
  googleMapURL="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places"
  isMarkerShown={true}
  loadingElement={
    <div
      className="wrapper"
    />
  }
  mapElement={
    <div
      className="wrapper"
    />
  }
/>
`;

exports[`EnhancedMap component should match snapshot when coords passed 1`] = `
<withScriptjs(withGoogleMap(Component))
  center={
    Object {
      "lat": 12.34,
      "lng": 34.21,
    }
  }
  containerElement={
    <div
      className="wrapper"
    />
  }
  defaultZoom={5}
  googleMapURL="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places"
  isMarkerShown={true}
  loadingElement={
    <div
      className="wrapper"
    />
  }
  mapElement={
    <div
      className="wrapper"
    />
  }
/>
`;

exports[`Map component should match snapshot 1`] = `<div />`;
